# jackson

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  client.example.yaml  client.yaml  client2.yaml  compose.yaml  config.client.example.yaml  config.client.yaml  config.server.example.yaml  config.server.yaml  config.yaml  docker-bake.hcl  jackson.service  pyproject.toml  server.example.yaml  server.yaml
.github/workflows/: pre-commit-autoupdate.yml  test.yml
modular/: api.py  api.service  jack.service  jacktrip.service
src/jack_server/: __init__.py  _libjackserver_bindings.py  _server.py
src/jackson/: api_client.py  api_server.py  connector_client.py  connector_server.py  jack_client.py  jack_server.py  jacktrip.py  logging.py  main.py  manager.py  port_connection.py  port_connector.py  settings.py  utils.py
src/jackson/api/: client.py  models.py  server.py
src/jackson/connector/: client.py  models.py  server.py
src/jackson/services/: __port_connector.py  channel_connector.py  jack_client.py  jack_server.py  jackd.py  jacktrip.py  models.py  port_connector.py  util.py
src/jackson/services/jack_server/: __init__.py  _server.py
src/jackson/services/messaging/: client.py  models.py  server.py
src/jackson/services/port_connector/: client.py  models.py  server.py
tests/: config.client.test.yaml  conftest.py  connector_server_test.py  jack_client_test.py  jack_server_test.py  main.py  port_connection_test.py  settings_test.py  test_main.py
