[tool.poetry]
name = "jackson"
version = "0.0.0"
description = ""
authors = ["Lev Vereshchagin <mail@vrslev.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = {extras = ["dotenv"], version = "1.9.0"}
JACK-Client = "0.5.3"
PyYAML = "6.0"
fastapi = "0.71.0"
uvicorn = {extras = ["standard"], version = "0.17.6"}
httpx = "0.22.0"
rich = "11.0.0"
jack-server = "0.1.2"
anyio = "3.5.0"
uvloop = "0.16.0"
click = "8.1.0"

[tool.poetry.scripts]
jackson = "jackson.main:cli"

[tool.poetry.dev-dependencies]
black = "22.3.0"
pre-commit = "2.16.0"
pytest = "7.0.0"
pytest-cov = "3.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pyright]
ignore = [".venv"]
typeCheckingMode = "strict"
reportUnnecessaryTypeIgnoreComment = "warning"
reportMissingTypeStubs = false
reportPrivateUsage = false
reportUninitializedInstanceVariable = "warning"
reportImplicitStringConcatenation = "warning"

[tool.black]
target-version = ["py310"]

[tool.isort]
profile = "black"

[tool.coverage.report]
skip_covered = true
show_missing = true

[tool.pytest.ini_options]
# addopts = "-s"
